deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aisphere
  labels:
    app.kubernetes.io/part-of: aisphere
