deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aisphere-iam-frontend
  namespace: aisphere
  labels:
    app: aisphere-iam-frontend
    service: iam-frontend
    app.kubernetes.io/name: aisphere-iam-frontend
    app.kubernetes.io/part-of: aisphere
spec:
  type: ClusterIP
  selector:
    app: aisphere-iam-frontend
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
